--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "https-browserify": "^1.0.0",
     "stream-http": "^3.2.0",
     "vue": "^3.2.41",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.1.6",
+    "vue-toasted": "^1.1.28",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
